[package]
name = "grovedbg"
authors = ["Evgeny Fomin <evgeny.fomin@dash.org>"]
version = "1.0.0"
description = "GroveDB inspection tool"
edition = "2021"
license = "MIT"
repository = "https://github.com/dashpay/grovedbg"

[dependencies]
eframe = { version = "0.28.1", features = ["persistence"] }
egui_logger = { git = "https://github.com/fominok/egui_logger", branch = "light-theme-colors" }
futures = "0.3.30"
grovedbg-types = { path = "../grovedb/grovedbg-types", version = "2.0.3" }
hex = "0.4.3"
integer-encoding = "4.0.2"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
slab = "0.4.9"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
egui-phosphor = "0.6.0"
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
reingold-tilford = "1.0.0"
anyhow = "1.0.87"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39.3", default-features = false, features = ["sync", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.39.3", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
